# PCT

./: Cargo.toml  README.md  lib.rs  simd.rs
.github/workflows/: CI.yml
benches/: decode.rs  encode.rs  form.rs
src/: const_encode.rs  decode.rs  encode.rs  form.rs  hex.rs  iri.rs  lib.rs  modes.rs  normalize.rs  scan.rs  set.rs  simd.rs  stream.rs
