[package]
name = "pct"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Percent-encoding and decoding for URLs with built-in form-urlencoded support"
license = "MIT OR Apache-2.0"
keywords = ["url", "percent", "encoding", "form", "urlencode"]
categories = ["encoding", "no-std", "web-programming"]
repository = "https://github.com/user/pct"
homepage = "https://github.com/user/pct"
documentation = "https://docs.rs/pct"
readme = "README.md"
exclude = ["/.github", "/tests"]

[features]
default = []
std = []
iri = []
