[package]
name = "pct"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Percent-encoding and decoding for URLs with built-in form-urlencoded support"
license = "MPL-2.0"
keywords = ["url", "percent", "encoding", "form", "urlencode"]
categories = ["encoding", "no-std", "web-programming"]
repository = "https://github.com/user/pct"
homepage = "https://github.com/user/pct"
documentation = "https://docs.rs/pct"
readme = "README.md"
exclude = ["/.github", "/tests"]

[features]
default = []
std = []
iri = []

[dev-dependencies]
criterion = "0.5"
percent-encoding = "2"
urlencoding = "2"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "form"
harness = false
